--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
-      "rootDir": "./"
+      "rootDir": "./src/"
     },
     "include": ["**/*.ts"],
     "exclude": ["node_modules"]
